commit per cambio json e avanzamento style css

--- a/Progetto/style.css
+++ b/Progetto/style.css
@@ -1,5 +1,14 @@
 *{
     background-color: white;
+    
+}
+h1
+{
+    text-align: center;
+}
+#cambiaclasse{
+    border-radius: 5px;
+    
 }
 #gliglia{
     font-size: large;
