--- a/Progetto/style.css
+++ b/Progetto/style.css
@@ -10,8 +10,60 @@ h1
     border-radius: 5px;
     
 }
-#gliglia{
-    font-size: large;
-    
-    border-radius: 5px;
-}
+* {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+  }
+
+  table,
+  th,
+  td,
+  tr {
+    border: 2px solid black;
+    border-collapse: collapse;
+  }
+  
+  tr{height: 30px;}
+  td{width: 50px;}
+  tr:hover,td:hover{background-color: #ddd;}
+  #modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+
+  #modalContent {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    height: 50px;
+  }
+
+  button {
+    color: #aaaaaa;
+    resize: auto;
+    font-size: 28px;
+    font-weight: bold;
+    height: 50px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  #close{float: right;}
+  button:hover {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
