--- a/Progetto/style.css
+++ b/Progetto/style.css
@@ -1,10 +1,11 @@
 *{
-    background-color: white;
     
+    background-color:#e6e6e6;
 }
 h1
 {
     text-align: center;
+    color: white;
 }
 #cambiaclasse{
     border-radius: 5px;
@@ -14,4 +15,15 @@ h1
     font-size: large;
     
     border-radius: 5px;
+}
+
+#modalContent{
+    border-radius: 15px;
+    background-color:#82D6FA;
+    
+}
+.modalbtn{
+    border-radius: 5px;
+    color: black;
+    background-color: white;
 }
